2007-12-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas/canvas_image_movable.cc:
	* glom/utility_widgets/canvas/canvas_image_movable.h: Added set_image() and 
	set_image_empty(), which adds a MISSING_IMAGE stock icon.
	* glom/mode_design/print_layouts/canvas_layout_item.cc: set_layout_item():
	Use set_image_empty().

	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h:
	on_canvas_drag_data_received(): After a drop, delete the temporary canvas 
	item shown during drag motion.
	Added on_canvas_drag_leave(), so we can delete the temporary item when the 
	user drags out of the canvas without doing a drop.

2007-12-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h:
	Added create_empty_item() to avoid duplicate code for the various ways to add 
	new items. For instance, when dragging from the toolbar, actually put some text 
	in the text item so that something is visible.
	We still need to make empty images and portals visible somehow. 

2007-12-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	Constructor: Do not use the drag_dest_set() default flag values, 
	because they prevent us from really using our own callbacks, and actually 
	cause a pointer grab when trying to get the data during a drag-motion event.
	on_canvas_drag_drop(): Call drag_get_data(), because we are no longer 
	using DEST_DEFAULT_DROP (via DEST_DEFAULT_ALL), which previously did 
	this for us.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc: Constructor:
	* glom/utility_widgets/datawidget.cc: Constructor:
	Added tooltip text for navigation buttons and the Open and Find buttons 
	next to IDs.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on the latest libepc.